--- a/monitoring/promtail/promtail-config.yml
+++ b/monitoring/promtail/promtail-config.yml
@@ -10,22 +10,19 @@ clients:
 
 scrape_configs:
   - job_name: container_logs
-    static_configs:
-      - targets:
-          - localhost
-        labels:
-          job: container_logs
-          __path__: /var/lib/docker/containers/*/*-json.log
+    docker_sd_configs:
+      - host: unix:///var/run/docker.sock
+        refresh_interval: 5s
+    relabel_configs:
+      - source_labels: ['__meta_docker_container_name']
+        regex: '/(.*)'
+        target_label: 'container'
     pipeline_stages:
       - json:
           expressions:
             log: log
             stream: stream
-            attrs: attrs
-      - json:
-          expressions:
-            container_name: attrs.container_name
-          source: attrs
+            container_name: container_name
       - labels:
           stream:
-          container_name:
+          container:
