--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
 services:
-  # Backend service
   backend:
     build: ./backend
     container_name: express_backend
-    ports:
-      - "3000:3000"
+    # Remove port mapping:
+    # ports:
+    #   - "3000:3000"
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/myapp
       - NODE_ENV=development
     depends_on:
       - mongodb
     restart: unless-stopped
+    networks:
+      - public
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # Frontend service
   frontend:
     build: ./frontend
     container_name: react_frontend
@@ -26,36 +28,39 @@ services:
     depends_on:
       - backend
     restart: unless-stopped
+    networks:
+      - public
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # MongoDB service
   mongodb:
     image: mongo:latest
     container_name: mongodb
     restart: unless-stopped
     environment:
       - MONGO_INITDB_DATABASE=myapp
-    ports:
-      - "27017:27017"
+    # ports:
+    #   - "27017:27017"  # Consider removing if you don't need external access
     volumes:
       - mongodb_data:/data/db
       - ./mongodb/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
+    networks:
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # Prometheus for metrics collection
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
-    ports:
-      - "9090:9090"
+    # Remove external port mapping to hide from public access:
+    # ports:
+    #   - "9090:9090"
     volumes:
       - ./monitoring/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
@@ -66,36 +71,39 @@ services:
       - '--web.console.templates=/etc/prometheus/consoles'
       - '--web.enable-lifecycle'
     restart: unless-stopped
+    networks:
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # Grafana for visualization
   grafana:
     image: grafana/grafana:latest
     container_name: grafana
     ports:
-      - "3001:3000"
+      - "3001:3000"  # Exposed externally
     volumes:
       - grafana_data:/var/lib/grafana
       - ./monitoring/grafana/datasources:/etc/grafana/provisioning/datasources
       - ./monitoring/grafana/dashboards:/etc/grafana/provisioning/dashboards
     environment:
-      - GF_SECURITY_ADMIN_USER=admin
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=munashe
+      - GF_SECURITY_ADMIN_PASSWORD=munashe01
       - GF_USERS_ALLOW_SIGN_UP=false
     depends_on:
       - prometheus
     restart: unless-stopped
+    networks:
+      - public
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # Node Exporter for host metrics
   node-exporter:
     image: prom/node-exporter:latest
     container_name: node_exporter
@@ -109,15 +117,17 @@ services:
       - '--path.rootfs=/rootfs'
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude=^/(sys|proc|dev|host|etc)($$|/)'
-    ports:
-      - "9100:9100"
+    # Remove port mapping:
+    # ports:
+    #   - "9100:9100"
+    networks:
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # cAdvisor for container metrics
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
@@ -128,15 +138,17 @@ services:
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
       - /dev/disk/:/dev/disk:ro
-    ports:
-      - "8080:8080"
+    # Remove port mapping:
+    # ports:
+    #   - "8080:8080"
+    networks:
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # Loki for log aggregation
   loki:
     image: grafana/loki:2.9.1
     container_name: loki
@@ -145,16 +157,18 @@ services:
       - loki_data:/loki
     command:
       - --config.file=/etc/loki/config.yml
-    ports:
-      - "3100:3100"
+    # Remove port mapping:
+    # ports:
+    #   - "3100:3100"
     restart: unless-stopped
+    networks:
+      - internal
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
 
-  # Promtail for log collection
   promtail:
     image: grafana/promtail:latest
     container_name: promtail
@@ -166,6 +180,8 @@ services:
     depends_on:
       - loki
     restart: unless-stopped
+    networks:
+      - internal
     logging:
       driver: "json-file"
       options:
@@ -177,3 +193,10 @@ volumes:
   prometheus_data:
   grafana_data:
   loki_data:
+
+networks:
+  public:
+    driver: bridge
+  internal:
+    driver: bridge
+    internal: true
